# routes/api.php
@@ -9,6 +9,8 @@ use App\Http\Controllers\Api\StatisticController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\FoodCostController;
 
+use App\Http\Controllers\Api\ServiceReviewController;
+
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 
@@ -16,10 +18,11 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/account', [AuthController::class, 'show']);
     Route::put('/account', [AuthController::class, 'update']);
     Route::delete('/account', [AuthController::class, 'destroy']);
-    Route::post('/consultation', [ConsultationController::class, 'store']);
-    Route::post('/tools/food-cost-calculator', [FoodCostController::class, 'calculate']);
-});
 
+});
+Route::post('/consultation', [ConsultationController::class, 'store']);
+Route::post('/tools/food-cost-calculator', [FoodCostController::class, 'calculate']);
+Route::post('/services/reviews', [ServiceReviewController::class, 'store']);
 Route::get('/services', [ServiceController::class, 'index']);
 Route::get('/services/lookup', [ServiceController::class, 'lookup']);
 Route::get('/contacts', [ContactController::class, 'index']);
